FIX: out of bound button

--- a/css/app.amp.css
+++ b/css/app.amp.css
@@ -419,6 +419,23 @@ pre code {
   code {
     font-size: 0.5em;
   }
+  .nav-bottom {
+    display: block;
+  }
+  .nav-bottom-left  {
+    display: block;
+  }
+  .nav-bottom-left > .btn {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .nav-bottom-right {
+    display: block;
+  }
+  .nav-bottom-right > .btn {
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
 
 /*
